--- a/homecss.css
+++ b/homecss.css
@@ -36,7 +36,7 @@
   text-align: center;
   height:600px;
   width:1300px;
-  border: 1px solid black;
+  border: 3px solid #4CAF50;
   padding:1px;
   margin:1px;
 }
